# AltCraft

./: .gitignore  .travis.yml  Block.cpp  Block.hpp  CMakeLists.txt  Debug.cpp  Debug.hpp  Display.cpp  Display.hpp  FEATURES.md  Field.cpp  Field.hpp  FieldParser.cpp  Game.cpp  Game.hpp  Network.cpp  Network.hpp  NetworkClient.cpp  NetworkClient.hpp  Packet.cpp  PacketParser.cpp  PacketParser.hpp  PositionF.hpp  PositionI.cpp  PositionI.hpp  README.md  RenderSection.cpp  Section.cpp  Section.hpp  World.cpp  World.hpp  main.cpp  utility.cpp  utility.h
.github/workflows/: ci.yml
cmake/: FindSDL2_net.cmake  FindSFML.cmake  PatchSrcList.cmake
cmake_modules/: FindGLFW.cmake  FindSFML.cmake  FindSOIL.cmake
code/: CMakeLists.txt  Field.hpp  FieldParser.cpp  Game.hpp  Nbt.hpp  Network.cpp  Network.hpp  NetworkClient.cpp  Packet.cpp  PacketBuilder.cpp  PositionF.cpp  PositionI.cpp  PositionI.hpp  Section.hpp  World.cpp  main.cpp  utility.h
code/graphics/: AssetManager.cpp  AssetManager.hpp  Camera3D.hpp  Display.cpp  Display.hpp  Shader.cpp
code/shaders/: simple.fs
cwd/: items.json  settings.json  test.rcss  test.rml  textures.json  textures.tps
cwd/assets/altcraft/: acmod.info
cwd/assets/altcraft/code/lua/: blocks.lua  init.lua
cwd/assets/altcraft/scripts/: blocks.lua  init.lua  ui.lua
cwd/assets/altcraft/shaders/: entity.json  face.json  fbo.json  rml.json  rmltex.json  sky.json
cwd/assets/altcraft/shaders/frag/: blur.fs  copy.fs  entity.fs  face.fs  fbo.fs  fwd_entity.fs  fwd_face.fs  fwd_liquid_face.fs  fwd_sky.fs  light.fs  liquid_face.fs  rml.fs  rmltex.fs  sky.fs  ssao.fs
cwd/assets/altcraft/shaders/vert/: entity.vs  face.vs  fbo.vs  light.vs  pp.vs  quad.vs  rml.vs  sky.vs
cwd/assets/altcraft/ui/: chat-styles.rcss  chat.rml  hud-styles.rcss  hud.rml  loading-styles.rcss  loading.rml  main-menu-styles.rcss  main-menu.rml  mc-styles.rcss  options-styles.rcss  options.rml  pause-styles.rcss  pause.rml  respawn-styles.rcss  respawn.rml
cwd/assets/minecraft/blockstates/: lava.json  water.json
cwd/assets/minecraft/models/block/: error.json  lava.json  water.json
cwd/shaders/: block.fs  block.gs  block.vs  entity.fs  entity.vs  face.fs  face.vs  gui.fs  gui.vs  simple.fs  simple.vs  sky.fs  sky.vs
depedencies/: CMakeLists.txt
depedencies/include/GL/: glew.h
depedencies/include/glm/gtx/: closest_point.inl
graphics/: AssetManager.cpp  AssetManager.hpp  Camera3D.hpp  Display.cpp  Display.hpp  Shader.cpp  Shader.hpp  simpleFS.fs  simpleVS.vs
include/: AssetManager.hpp  Core.hpp  GameState.hpp  Nbt.hpp  Utility.hpp
include/graphics/: Gui.hpp  RenderSection.hpp  Shader.hpp  Texture.hpp  Widget.hpp
include/network/: Packet.hpp  Socket.hpp
include/world/: Collision.hpp  Section.hpp  World.hpp
old/: Nbt.hpp  main.cpp
old/core/: AssetManager.cpp  AssetManager.hpp  Core.cpp  Core.hpp  Event.cpp  Event.hpp
old/graphics/: Gui.cpp  RenderSection.cpp  RenderSection.hpp  Texture.cpp  Widget.cpp
old/network/: Network.hpp  Stream.cpp  Stream.hpp
old/world/: GameState.cpp  GameState.hpp  Section.hpp  World.hpp
shaders/: simple.fs  simple.vs
src/: AltCraft.h  AssetManager.cpp  AssetManager.hpp  Audio.cpp  Audio.hpp  Block.cpp  Block.hpp  Chat.cpp  Chat.hpp  Chunk.cpp  Chunk.hpp  Collision.cpp  Collision.hpp  Core.cpp  Core.hpp  DebugInfo.cpp  DebugInfo.hpp  Entity.cpp  Entity.hpp  Event.cpp  Event.hpp  FSM.cpp  FSM.hpp  Framebuffer.cpp  Framebuffer.hpp  Frustum.cpp  Frustum.hpp  Gal.hpp  GalOgl.cpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  GlobalState.cpp  GlobalState.hpp  ModLoader.cpp  ModLoader.hpp  Network.cpp  Network.hpp  NetworkClient.cpp  (+59 more)
src/audio/: OpenAL.cpp
src/core/: AssetManager.cpp  AssetManager.hpp  Core.cpp  Core.hpp  Event.cpp  Event.hpp
src/gamestate/: Game.cpp  Game.hpp  GameState.cpp  GameState.hpp
src/graphics/: AssetManager.cpp  AssetManager.hpp  AssetManager_old.cpp  AssetManager_old.hpp  Camera3D.cpp  Display.cpp  Display.hpp  Frustrum.cpp  Frustrum.hpp  Gui.cpp  Gui.hpp  RenderSection.cpp  RenderSection.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Widget.cpp
src/gui/: Gui.cpp  Gui.hpp  Widget.cpp
src/nbt/: Nbt.hpp
src/network/: Network.cpp  Network.hpp  NetworkClient.cpp  NetworkClient.hpp  Packet.hpp  Socket.cpp  Socket.hpp  Stream.cpp  Stream.hpp
src/packet/: Field.cpp  Field.hpp  FieldParser.cpp  FieldParser.hpp  Packet.cpp  Packet.hpp  PacketBuilder.hpp  PacketParser.cpp
src/platform/: Socket.hpp  StreamSocket.hpp
src/platform/Linux/: Socket.cpp  Socket.hpp  StreamSocket.cpp  StreamSocket.hpp
src/platform/SDL/: Socket.cpp  Socket.hpp  StreamSocket.cpp  StreamSocket.hpp
src/utility/: Vector.hpp
src/world/: Block.cpp  Block.hpp  Collision.cpp  GameState.cpp  Section.cpp  Section.hpp  World.cpp  World.hpp
